tests/baselines/reference/for-of41.errors.txt
tests/cases/conformance/es6/for-ofStatements/for-of41.ts(2,30): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/for-ofStatements/for-of41.ts (1 errors) ====
    var array = [{x: [0], y: {p: ""}}]
    for (var {x: [a], y: {p}} of array) {
                                 ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
        a;
        p;
    }